# django-openapi

./: .gitpod.yml  LICENSE  Makefile  README.md  pyproject.toml  runserver.sh  setup.py
demo/: app.py  hello_app.py  intro.py  py3.py
django_openapi/: __init__.py  api.py  cookie.py  params.py  route.py  utils.py
django_openapi/schema/: __init__.py  base.py
django_openapi/schema/fields/: __init__.py  array.py  base.py  boolean.py  exceptions.py  number.py  object.py  string.py  utils.py
openapi-router/: __init__.py  params.py
openapi-router/schema/fields/: constants.py
openapi_router/schema/fields/: number.py  object.py
tests/: app.py  test_intro.py
