[tool.poetry]
name = "django_openapi"
version = "0.1.0"
description = "A minimal FastAPI implementation in python2 + Django without pydantic"
authors = ["toki.kanno <toki.kanno@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
django = [
    {version = "^1.8", python = "^2.7"}
    {version = "3.0", python = "^3.6"}
]
six = "^1.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}
setuptools = "^49.4.0"
wheel = "^0.34.2"
twine = "^3.2.0"

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

